# ctf4science

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  api.html  benchmark_module.html  build.txt  citations.html  configuration.html  contributing.html  data_module.html  datasets.html  evaluation_metrics.html  evaluation_module.html  genindex.html  getting_started.html  index.html  modules.html  noxfile.py  objects.inv  performance_module.html  py-modindex.html  pyproject.toml  pyrefly.toml  pytest.toml  ruff.toml  search.html  searchindex.js  tune_module.html  visualization_module.html
.github/workflows/: docs.yml  doctest.yml  lint_format.yml  pytest.yml
_sources/: api.rst.txt  configuration.rst.txt  contributing.rst.txt  data_module.rst.txt  datasets.rst.txt  evaluation_module.rst.txt  getting_started.rst.txt  index.rst.txt  modules.rst.txt  performance_module.rst.txt  visualization_module.rst.txt
ctf4science/: benchmark_module.py  data_module.py  eval_module.py  performance_module.py  tune_module.py  visualization_module.py
ctf4science/config/: default_slurm_config.yaml  default_visualization_config.yaml
data/KS_Official/: KS_Official.yaml  README.md
data/Lorenz_Official/: README.md
data/ODE_Lorenz/: ODE_Lorenz.yaml  README.md
data/PDE_KS/: README.md
data/crustal_3d/: README.md  crustal_3d.yaml
data/ocean_das/: README.md  ocean_das.yaml
data/seismo/: README.md  seismo.yaml  sensor_locations.csv
data/sst/: README.md  sst.yaml
docs/: benchmark_module.md  configuration.md  datasets.md  developer_instructions.md  evaluation.md  evaluation_module.md  getting_started.md  hyperparameter_optimization.md  visualization.md
docs/source/: benchmark_module.rst  citations.rst  conf.py  configuration.rst  contributing.rst  data_module.rst  datasets.rst  evaluation_metrics.rst  getting_started.rst  modules.rst  tune_module.rst  visualization_module.rst
notebooks/: VisualizeSelfReportedScores.ipynb  compare_burnin_vs_test.ipynb  compare_pod.py  create_pod.py  data_shapes.ipynb  evaluate_KS.ipynb  evaluate_Lorenz.ipynb  evaluate_seismo.ipynb  plot_KS.ipynb  plot_seis.ipynb  plot_seis_helpers.py  pod_analysis_msfr.ipynb  score_key.ipynb  visualize_scores_helpers.py
submissions/: README.md
test/: test_data_module.py  test_eval_module.py  test_visualization_module.py
tests/: test_baseline.py  test_data_module.py  test_eval_module.py
(+100 files in other folders)
