[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "ctf4science"
version = "0.11"
authors = [
    {name = "AI Institute in Dynamic Systems"}
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "importlib-resources",
    "pyyaml",
]
requires-python = ">=3.6"
description = "A framework for benchmarking modeling methods on chaotic systems"

[project.urls]
Homepage = "https://github.com/CTF-for-Science/ctf4science"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []
namespaces = true

[tool.setuptools.package-data]
ctf4science = ["data/**/*", "ctf4science/config/**/*"]

[project.optional-dependencies]
all = ["jupyterlab","ray[data,train,tune,serve]","plotly"]
notebooks = ["jupyterlab"]
optuna = ["optuna"]
ray = ["ray[data,train,tune,serve]"]
plotting = ["gspread","google-auth","google-auth-oauthlib","google-auth-httplib2","pandas","seaborn"]

