[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "ctf4science"
version = "0.2"
authors = [
    {name = "AI Institute in Dynamic Systems"}
]
dependencies = [
    "numpy",
    "scipy",
    "pyyaml",
    "pandas",
    "seaborn",
    "matplotlib",
    "importlib-resources",
]
requires-python = ">=3.6"
description = "A framework for benchmarking modeling methods on chaotic systems"

[project.urls]
Homepage = "https://github.com/CTF-for-Science/ctf4science"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []
namespaces = true

[tool.setuptools.package-data]
ctf4science = ["data/**/*", "ctf4science/config/**/*"]

[project.optional-dependencies]
all = ["jupyterlab","ray[data,train,tune,serve]","plotly","ipykernel"]
notebooks = ["jupyterlab"]
optuna = ["optuna"]
ray = ["ray[data,train,tune,serve]"]
plotting = ["gspread","google-auth","google-auth-oauthlib","google-auth-httplib2","pandas"]
dev  = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "sphinx>=9.1.0",
    "numpydoc>=1.10.0",
    "pyrefly>=0.52.0",
    "ruff>=0.15.0",
    "pre-commit>=4.5.1",
    "hatch>=1.16.3",
    "hatchling>=1.28.0",
    "pydata-sphinx-theme>=0.16.1",
    "nox>=2026.2.9",
    "sphinx-design>=0.7.0"
]

